Update PersistentDataTab.java
연산 방식 변경